added footer and final polish overall

--- a/styles/card.css
+++ b/styles/card.css
@@ -19,7 +19,7 @@
     font-size: 50px;
     
 }
-.main-distri{
+.main-di{
     font-weight: lighter;
     text-align: center;
     font-size: 1.8rem;
