--- a/styles/banner.css
+++ b/styles/banner.css
@@ -4,14 +4,15 @@
 .banar-text p{
      max-width: 570px;
   height: auto;
-  margin-top: 100px;
+  margin-top: 50px;
   font-weight: lighter;
+  color: rgba(0, 0, 0, 0.5);
 }
 .banar-text{
 
   max-width: 570px;
   height: auto;
-  margin-top: 100px;
+  margin-top: 50px;
 }
 span{
     color: #E95A08;
