--- a/styles/flowersandlatest.css
+++ b/styles/flowersandlatest.css
@@ -17,6 +17,7 @@
 .abc li{
     gap: 130px;
     text-align: left;
+    color: rgba(0, 0, 0, 0.5);
 }
 .main-banar-text{
     max-width: 540px;
@@ -80,6 +81,7 @@
   line-height: 1.6;
   word-break: normal;
   white-space: normal;
+  color: rgba(0, 0, 0, 0.5);
    
     
 }
@@ -112,7 +114,7 @@
     margin-top: 20px;
    }
    .main-para-text{
-    font-size: 14px;
+    font-size: 1.2rem;
     width: 100%;
     max-width: 100%;
     margin: 0 auto;
@@ -125,6 +127,7 @@
      margin: 60px auto 30px auto;
     padding: 0 15px;
    }
+   
 
  
     
